VLStream-Cloud-Backend-Server/apaas-workflowforms/deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <IMAGE_NAME>
  namespace: <NAMESPACES>
  labels:
    app: <IMAGE_NAME>
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: <IMAGE_NAME>
  template:
    metadata:
      labels:
        task: backend
        k8s-app: <IMAGE_NAME>
    spec:
      containers:
        - name: <IMAGE_NAME>
          image: hb.oortcloudsmart.com/oa-apaas/<IMAGE_NAME>:__VERSION__
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "1400Mi"
            limits:
              cpu: "800m"
              memory: "2800Mi"
      #        readinessProbe:
      #          failureThreshold: 3
      #          httpGet:
      #            path: /config
      #            port: 8092
      #          initialDelaySeconds: 30
      #          periodSeconds: 30
      #          successThreshold: 1
      #          timeoutSeconds: 10
      #        livenessProbe:
      #          httpGet:
      #            path: /config
      #            port: 8092
      #          initialDelaySeconds: 40
      #          periodSeconds: 30
      #          successThreshold: 1
      #          timeoutSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: NotIn
                    values:
                      - im
