VLStream-Cloud-Backend-Server/apaas-workflowforms/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: backend
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: <IMAGE_NAME>
  name: <IMAGE_NAME>
  namespace: <NAMESPACES>
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    k8s-app: <IMAGE_NAME>
